<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scaleType="centerCrop"
        android:src="@drawable/art_user_bottom_pattern"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimens_48dp"
            android:src="@drawable/logo_text_primary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldEmail"
                style="@style/EditTextPrimary"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldPassword"
                style="@style/EditTextPrimary"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <id.radhika.lib.ui.component.LabelComp
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dimens_56dp"
            android:paddingTop="@dimen/dimens_8dp"
            android:paddingBottom="@dimen/dimens_8dp"
            android:text="@string/text_forgot_your_password_click_here" />

        <id.radhika.lib.ui.component.ButtonLoadingComp
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_16dp"
            app:disabled="true"
            app:text="Login"
            app:textSize="medium" />

        <id.radhika.lib.ui.component.LabelComp
            android:id="@+id/labelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_doesn_t_have_an_account_sign_up_here" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>