<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.changepassword.ChangePasswordScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <id.radhika.lib.ui.component.ToolbarComp
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorRootBackground"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_20dp"
            android:src="@drawable/art_forgot_password_v2" />

        <id.radhika.lib.ui.component.LabelComp
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:text="@string/text_lupa_password_ya"
            android:textSize="@dimen/size_24sp" />

        <id.radhika.lib.ui.component.LabelComp
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_16dp"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="2dp"
            android:text="@string/text_tenang_masukin_email_terdaftar_kamu_ke_kolom_dibawah_ini_nanti_kami_bantu_untuk_me_reset_password_kamu"
            android:textColor="#CC999999"
            android:textSize="@dimen/size_14sp"
            app:fontFamily="@font/gotham_regular" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_24dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldEmail"
                style="@style/EditTextPrimary"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <id.radhika.lib.ui.component.ButtonLoadingComp
            android:id="@+id/buttonForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="Reset Password"
            app:disabled="true"
            app:textSize="medium" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>