<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.changepassword.ChangePasswordScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <id.radhika.lib.ui.component.ToolbarComp
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorRootBackground"
            android:orientation="vertical"
            android:padding="@dimen/dimens_16dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_32dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldOldPassword"
                    style="@style/EditTextPrimary"
                    android:hint="@string/text_kata_sandi_lama"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <id.radhika.lib.ui.component.LabelComp
                style="@style/ClickableContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_32dp"
                android:paddingTop="@dimen/dimens_4dp"
                android:paddingBottom="@dimen/dimens_4dp"
                android:text="Lupa kata sandi NamaApp Anda ?"
                android:textColor="@color/colorGreenGrass"
                android:textSize="@dimen/size_14sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_16dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldNewPassword"
                    style="@style/EditTextPrimary"
                    android:hint="@string/text_kata_sandi_baru"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldRetypePassword"
                    style="@style/EditTextPrimary"
                    android:hint="@string/text_ulangi_kata_sandi_baru"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <id.radhika.lib.ui.component.ButtonLoadingComp
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:layout_marginBottom="@dimen/dimens_8dp"
                app:disabled="true"
                app:text="@string/text_ubah"
                app:textSize="medium" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>